--- a/basic/snowflake.yml.jinja
+++ b/basic/snowflake.yml.jinja
@@ -1,9 +1,9 @@
+definition_version: 1
 native_app:
   name: {{project_name}}
 
   source_stage: app_src.stage
 
   artifacts:
-  - app/setup_script.sql
-  - app/manifest.yml
-  - app/README.md
+    - src: app/*
+      dest: ./
