PMM recommended updates

--- a/basic/snowflake.yml.jinja
+++ b/basic/snowflake.yml.jinja
@@ -1,5 +1,4 @@
-# This is a project definition file, a required component of the Snowflake Native Apps Project.
-# DO NOT delete this file if you intend to use snowCLI with this project.  
+# This is a project definition file, a required component if you intend to use Snowflake CLI in a project directory such as this template.
 
 definition_version: 1
 native_app:
